--- a/capstone-frontend/index.html
+++ b/capstone-frontend/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<!-- nice fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <style> body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, sans-serif; } </style>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Path2Tech Capstone Front End</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
